Closed
Bug 386337
Opened 18 years ago
Closed 18 years ago
Profile migration doesn't migrate search plugins
Categories
(SeaMonkey :: Startup & Profiles, defect)
SeaMonkey
Startup & Profiles
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: iav, Assigned: ajschult784)
Details
(Keywords: dataloss)
Attachments
(1 file)
2.44 KB,
patch
|
standard8
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a6pre) Gecko/20070628 SeaMonkey/2.0a1pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a6pre) Gecko/20070628 SeaMonkey/2.0a1pre
I have 7 search plugins in searchplugins directory of my profile.
After migration I see 3 searchengine in search drop-down box. Looks like there are default plugins - google, ask.com and dmoz; I had only google from this list before.
Reproducible: Always
Reporter | ||
Comment 1•18 years ago
|
||
Sorry, forget to say: migration was from SM 1.9 to SeaMonkey/2.0a1pre
Keywords: dataloss
Assignee | ||
Updated•18 years ago
|
Assignee: general → nobody
Component: General → Profile: Manager
QA Contact: general → profile-manager
Version: unspecified → Trunk
Assignee | ||
Updated•18 years ago
|
Assignee: nobody → ajschult
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows XP → All
Hardware: PC → All
Assignee | ||
Comment 2•18 years ago
|
||
Attachment #293268 -
Flags: review?(bugzilla)
Updated•18 years ago
|
Attachment #293268 -
Flags: review?(bugzilla) → review+
Assignee | ||
Comment 3•18 years ago
|
||
FIXED
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•