Bug 386337: Profile migration doesn't migrate search plugins.  r=Standard8